# lallec-hs

./: .gitignore  LICENSE  Makefile  README.md  lattec.cabal
app/: Main.hs
src/: Parser.cf
src/Latte/: CLI.hs  Commons.hs  Errors.hs  Parser.hs  Validations.hs
src/Latte/Parser/: Abs.hs  Doc.txt  ErrM.hs  Lex.x  Par.y  Print.hs  Skel.hs  Test.hs
src/Latte/Validations/: Var.hs
test/Latte/Parser/: ParserSpec.hs
test/Latte/Validations/: VarSpec.hs
