name:                lattec
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mpsk2/lattec#readme
license:             BSD3
license-file:        LICENSE
author:              Michał Piotr Stankiewicz
maintainer:          ms335789@students.mimuw.edu.pl
copyright:           MIT
category:            language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
                     , Latte.Parser.Abs
                     , Latte.Parser.ErrM
                     , Latte.Parser.Lex
                     , Latte.Parser.Par
                     , Latte.Parser.Print
                     , Latte.Parser.Skel
                     , Latte.Parser.Test
  build-depends:       array
                     , base >= 4.7 && < 5
  default-language:    Haskell2010
  build-tools:         alex
                     , happy

executable lattec
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lattec
  default-language:    Haskell2010

test-suite lattec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , directory
                     , directory-tree
                     , lattec
                     , hspec
                     , MissingH
                     , mtl
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-tools:         alex
                     , happy

source-repository head
  type:     git
  location: https://github.com/mpsk2/lattec
